@@ -71,7 +71,8 @@ def run_tests():
                  if (entry.startswith('test_') and entry.endswith('.py'))]
         files.sort()
 
-    print >>sys.stderr, '    Pygments Test Suite running, stand by...    '
+    print >>sys.stderr, '    Pygments Test Suite running, stand by...   '
+    print >>sys.stderr, '             (using Python %s)' % sys.version.split()[0]
     print >>sys.stderr, '==============================================='
 
     for testfile in files:
