@@ -13,6 +13,8 @@ Version 0.6
 
 - License change to BSD.
 
+- Added lexers for the Myghty template language.
+
 - Added a Scheme lexer (thanks to Marek Kubica).
 
 - Added some functions to iterate over existing lexers, formatters
